Refactor heavily, enhance SourceGenerator

--- a/srcgen.properties
+++ b/srcgen.properties
@@ -2,5 +2,6 @@
 user: postgres
 password: postgres
 
-root-dir: D:/share/tnie/project/dbmeta/generated
+# root-dir: D:/share/tnie/project/dbmeta/generated
+root-dir: generated
 package: fi.tnie.db.generated
