Add template-based source code generation

--- a/srcgen.properties
+++ b/srcgen.properties
@@ -4,4 +4,4 @@ password: postgres
 
 # root-dir: D:/share/tnie/project/dbmeta/generated
 root-dir: generated
-package: fi.tnie.db.generated
+package: fi.tnie.db.myapp
