--- a/srcgen.properties
+++ b/srcgen.properties
@@ -3,5 +3,5 @@ user: postgres
 password: postgres
 
 # root-dir: D:/share/tnie/project/dbmeta/generated
-root-dir: generated
-package: fi.tnie.db.myapp
+fi.tnie.db.build.source-dir: generated
+fi.tnie.db.build.root-package: fi.tnie.db.myapp
