--- a/src/fi/tnie/db/source/ABSTRACT.in
+++ b/src/fi/tnie/db/source/ABSTRACT.in
@@ -1,10 +1,10 @@
 package {{package-name}};
 
-import fi.tnie.db.DefaultPersistentEntity;
+import fi.tnie.db.DefaultEntity;
 {{imports}}
 
 public abstract class {{table-abstract-class}}
-    extends DefaultPersistentEntity<
+    extends DefaultEntity<
         {{table-interface}}.Attribute,
         {{table-interface}}.Reference,
         {{table-interface}}.Query,
