--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache Log4J"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Utilities"/>
-	<classpathentry kind="lib" path="generated/bin"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="lib" path="gen/bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache CSV"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
