Remove Q type parameter from Entity

--- a/src/fi/tnie/db/source/FACTORY_IMPLEMENTATION.in
+++ b/src/fi/tnie/db/source/FACTORY_IMPLEMENTATION.in
@@ -2,5 +2,11 @@ package {{package-name}};
 
 public class {{schema-factory-impl}} 
     implements {{schema-factory}} {
+
+	static {
+		fi.tnie.db.gen.ent.LiteralCatalog.getInstance();
+	}
+    
+    
 {{factory-method-list}}
 }
