--- a/src/fi/tnie/db/source/ABSTRACT.in
+++ b/src/fi/tnie/db/source/ABSTRACT.in
@@ -1,13 +1,12 @@
 package {{package-name}};
 
-import fi.tnie.db.ent.DefaultEntity;
+import fi.tnie.db.ent.EnumEntity;
 {{imports}}
 
 public abstract class {{table-abstract-class}}
-    extends DefaultEntity<
+    extends EnumEntity<
         {{table-interface}}.Attribute,
-        {{table-interface}}.Reference,
-        {{table-interface}}.Query,
+        {{table-interface}}.Reference,        
         {{table-interface}}.Type,
         {{table-interface}}
     >
