Require Entity -type parameter to implement Attribute
'A' being merely Serializable seems to give GWT compiler a hard time.

--- a/src/fi/tnie/db/source/enum-type.in
+++ b/src/fi/tnie/db/source/enum-type.in
@@ -1,5 +1,5 @@
 
-enum {{enum-type}} implements Identifiable {
+enum {{enum-type}} implements fi.tnie.db.ent.Attribute {
     {{enum-constants}}
     ;
     
